--- a/AD_JAN24.ipynb
+++ b/AD_JAN24.ipynb
@@ -225,7 +225,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 819
         },
         "id": "MhuehP6pD7qN",
         "outputId": "cce7f751-aa0b-42ec-8f22-06ea4b894215"
@@ -1113,7 +1113,21 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "  0%|          | 2/802 [00:06<44:46,  3.36s/it]"
+            "100%|██████████| 802/802 [39:39<00:00,  2.97s/it]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch [1/10], Loss: 4.2596\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            " 59%|█████▉    | 473/802 [26:22<18:22,  3.35s/it]"
           ]
         }
       ]
