--- a/AD_JAN24.ipynb
+++ b/AD_JAN24.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMlr/BqUs7Z3aQoNsVMquFw",
+      "authorship_tag": "ABX9TyPKrP4fI9I5UTEQ+O4uh4Kl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -973,6 +973,7 @@
     {
       "cell_type": "code",
       "source": [
+        "import os\n",
         "import torch\n",
         "import torch.nn as nn\n",
         "import torch.optim as optim\n",
@@ -980,6 +981,10 @@
         "from torchvision import transforms\n",
         "import numpy as np\n",
         "from tqdm import tqdm\n",
+        "\n",
+        "# Define a directory to save checkpoints\n",
+        "checkpoint_dir = \"checkpoints\"\n",
+        "os.makedirs(checkpoint_dir, exist_ok=True)\n",
         "\n",
         "# Combine original and augmented data\n",
         "all_images = list(dataset['image']) + augmented_images  # Replace 'image' with the correct key\n",
@@ -1057,7 +1062,6 @@
         "diffusion_model = DiffusionModel()\n",
         "\n",
         "# Calculate the correct input_dim for the classifier\n",
-        "# Forward a dummy input through the encoder to get the output shape\n",
         "dummy_input = torch.randn(1, 1, 128, 128)  # Adjust input size based on your image size\n",
         "with torch.no_grad():\n",
         "    dummy_output = diffusion_model.encoder(dummy_input)\n",
@@ -1072,9 +1076,39 @@
         "criterion = nn.CrossEntropyLoss()\n",
         "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
         "\n",
+        "# Function to save a checkpoint\n",
+        "def save_checkpoint(epoch, model, optimizer, loss, checkpoint_dir):\n",
+        "    checkpoint_path = os.path.join(checkpoint_dir, f\"checkpoint_epoch_{epoch}.pth\")\n",
+        "    torch.save({\n",
+        "        'epoch': epoch,\n",
+        "        'model_state_dict': model.state_dict(),\n",
+        "        'optimizer_state_dict': optimizer.state_dict(),\n",
+        "        'loss': loss,\n",
+        "    }, checkpoint_path)\n",
+        "    print(f\"Checkpoint saved at {checkpoint_path}\")\n",
+        "\n",
+        "# Function to load a checkpoint\n",
+        "def load_checkpoint(checkpoint_path, model, optimizer):\n",
+        "    checkpoint = torch.load(checkpoint_path)\n",
+        "    model.load_state_dict(checkpoint['model_state_dict'])\n",
+        "    optimizer.load_state_dict(checkpoint['optimizer_state_dict'])\n",
+        "    epoch = checkpoint['epoch']\n",
+        "    loss = checkpoint['loss']\n",
+        "    print(f\"Checkpoint loaded from {checkpoint_path} (epoch {epoch}, loss {loss})\")\n",
+        "    return epoch\n",
+        "\n",
         "# Training loop\n",
         "num_epochs = 10\n",
-        "for epoch in range(num_epochs):\n",
+        "start_epoch = 0\n",
+        "\n",
+        "# Load the latest checkpoint if available\n",
+        "checkpoint_files = [f for f in os.listdir(checkpoint_dir) if f.startswith(\"checkpoint_epoch_\")]\n",
+        "if checkpoint_files:\n",
+        "    latest_checkpoint = max(checkpoint_files, key=lambda x: int(x.split(\"_\")[2].split(\".\")[0]))\n",
+        "    latest_checkpoint_path = os.path.join(checkpoint_dir, latest_checkpoint)\n",
+        "    start_epoch = load_checkpoint(latest_checkpoint_path, model, optimizer) + 1\n",
+        "\n",
+        "for epoch in range(start_epoch, num_epochs):\n",
         "    model.train()\n",
         "    running_loss = 0.0\n",
         "    for images, labels in tqdm(dataloader):\n",
@@ -1089,6 +1123,9 @@
         "\n",
         "        running_loss += loss.item()\n",
         "\n",
+        "    # Save checkpoint after each epoch\n",
+        "    save_checkpoint(epoch, model, optimizer, running_loss / len(dataloader), checkpoint_dir)\n",
+        "\n",
         "    print(f\"Epoch [{epoch+1}/{num_epochs}], Loss: {running_loss/len(dataloader):.4f}\")\n",
         "\n",
         "print(\"Training complete!\")"
@@ -1098,7 +1135,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JwH56SEcTx-I",
-        "outputId": "d7fab075-2cea-480d-cfe4-49462e3aec8f"
+        "outputId": "9a27e477-a6a2-46e2-cde0-483893f08034"
       },
       "execution_count": null,
       "outputs": [
@@ -1113,21 +1150,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 802/802 [39:39<00:00,  2.97s/it]\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Epoch [1/10], Loss: 4.2596\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            " 59%|█████▉    | 473/802 [26:22<18:22,  3.35s/it]"
+            "  2%|▏         | 19/802 [00:57<39:56,  3.06s/it]"
           ]
         }
       ]
