--- a/AD_JAN24.ipynb
+++ b/AD_JAN24.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPKrP4fI9I5UTEQ+O4uh4Kl",
+      "authorship_tag": "ABX9TyOZrO14ThhUWx/bEhAGqx2I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -981,9 +981,13 @@
         "from torchvision import transforms\n",
         "import numpy as np\n",
         "from tqdm import tqdm\n",
+        "from google.colab import drive\n",
         "\n",
-        "# Define a directory to save checkpoints\n",
-        "checkpoint_dir = \"checkpoints\"\n",
+        "# Mount Google Drive\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "# Define a directory in Google Drive to save checkpoints\n",
+        "checkpoint_dir = \"/content/drive/My Drive/checkpoints\"  # Change this to your desired folder\n",
         "os.makedirs(checkpoint_dir, exist_ok=True)\n",
         "\n",
         "# Combine original and augmented data\n",
@@ -1135,7 +1139,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JwH56SEcTx-I",
-        "outputId": "9a27e477-a6a2-46e2-cde0-483893f08034"
+        "outputId": "6adbd854-2b9f-4cce-afe7-95000627a721"
       },
       "execution_count": null,
       "outputs": [
@@ -1143,14 +1147,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Input dimension for classifier: 65536\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "  2%|▏         | 19/802 [00:57<39:56,  3.06s/it]"
+            "Mounted at /content/drive\n"
           ]
         }
       ]
