run with 1 epochs

--- a/AD_JAN24.ipynb
+++ b/AD_JAN24.ipynb
@@ -1147,7 +1147,30 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Mounted at /content/drive\n",
+            "Input dimension for classifier: 65536\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 802/802 [40:43<00:00,  3.05s/it]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Checkpoint saved at /content/drive/My Drive/checkpoints/checkpoint_epoch_0.pth\n",
+            "Epoch [1/10], Loss: 5.3306\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            " 40%|████      | 321/802 [17:48<26:12,  3.27s/it]"
           ]
         }
       ]
